--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-project-message": "^9.3",
         "drupal/core-recommended": "^9.3",
+        "drupal/google_analytics": "^4.0",
         "drupal/google_analytics_counter": "^4.0",
-        "drupal/samlauth": "^3.8"
+        "drupal/queue_ui": "^3.1",
+        "drupal/samlauth": "^3.8",
+        "drupal/webform": " ^6.1@beta"
     },
     "conflict": {
         "drupal/drupal": "*"
