Added custom module, updated gitignore, added lando files

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@
 
 # Ignore sensitive information
 /web/sites/*/services.yml
-/web/sites/*/settings.local.php
+#/web/sites/*/settings.local.php
 #default.settings.php
-settings.local.php
+#settings.local.php
 services.yml
 web/sites/default/settings.php
 # Ignore Drupal's file directory
