--- a/.lando.yml
+++ b/.lando.yml
@@ -2,3 +2,14 @@ name: gc
 recipe: drupal9
 config:
   webroot: web
+services:
+  appserver:
+    type: php:7.4
+    xdebug: false
+    config:
+      php: .lando/php.ini
+    overrides:
+      environment:
+        PHP_IDE_CONFIG: "serverName=appserver"
+        LANDO_HOST_IP: "host.docker.internal"
+        XDEBUG_CONFIG: "remote_enable=1 remote_host=host.docker.internal"
