--- a/web/modules/custom/coe_webform_reports/coe_webform_reports.services.yml
+++ b/web/modules/custom/coe_webform_reports/coe_webform_reports.services.yml
@@ -3,10 +3,10 @@ services:
     class: 'Drupal\coe_webform_reports\Service\ViewCountService'
     arguments: ['@database']
 
-  coe_webform_reports.analytics_data_client:
-    class: Drupal\coe_webform_reports\Service\AnalyticsDataClient
-    arguments: ['@entity_type.manager', '@google_api_service_client.client',
-                '@logger.coe_webform_reports']
+#  coe_webform_reports.analytics_data_client:
+#    class: Drupal\coe_webform_reports\Service\AnalyticsDataClient
+#    arguments: ['@entity_type.manager', '@google_api_service_client.client',
+#                '@logger.coe_webform_reports']
 
   # Logger.
   logger.coe_webform_reports:
