--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "drupal/recaptcha": "^3.2",
         "drupal/samlauth": "^3.8",
         "drupal/token": "^1.13",
+        "drupal/views_aggregator": "^2.0",
         "drupal/webform": " ^6.1@beta",
         "drupal/webform_views": "^5.2",
         "google/analytics-data": "*",
