--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/samlauth": "^3.8",
         "drupal/token": "^1.13",
         "drupal/views_aggregator": "^2.0",
+        "drupal/views_bulk_operations": "^4.2",
         "drupal/webform": " ^6.1@beta",
         "drupal/webform_views": "^5.2",
         "google/analytics-data": "*",
