--- a/web/modules/custom/coe_webform_reports/coe_webform_reports.routing.yml
+++ b/web/modules/custom/coe_webform_reports/coe_webform_reports.routing.yml
@@ -1,5 +1,5 @@
 coe_webform_reports.page:
-  path: '/admin/reports-page'
+  path: '/admin/reports-page/{webform}'
   defaults:
     _controller: '\Drupal\coe_webform_reports\Controller\ReportsPage::content'
     _title: 'Submission Reports Page'
