latest custom module changes

--- a/web/modules/custom/coe_webform_purge/coe_webform_purge.services.yml
+++ b/web/modules/custom/coe_webform_purge/coe_webform_purge.services.yml
@@ -1,4 +1,4 @@
 services:
   coe_webform_purge.submission:
     class: 'Drupal\coe_webform_purge\Service\WebformSubmissionPurge'
-    arguments: ['@queue']
+    arguments: ['@queue', '@entity_type.manager', '@config.factory']
