--- a/sync/views.view.content.yml
+++ b/sync/views.view.content.yml
@@ -5,8 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_trend
   module:
+    - csv_serialization
     - node
+    - rest
+    - serialization
     - user
+    - views_data_export
 _core:
   default_config_hash: vBKWYGGDoAX-tFd1JErB8tZLSxx3lJ0foouVsgpcbB4
 id: content
@@ -306,7 +310,7 @@ display:
         type: some
         options:
           offset: 0
-          items_per_page: 500
+          items_per_page: 10
       exposed_form:
         type: basic
         options:
@@ -682,6 +686,49 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_trend'
+  data_export_1:
+    id: data_export_1
+    display_title: 'Data export'
+    display_plugin: data_export
+    position: 2
+    display_options:
+      style:
+        type: data_export
+        options:
+          formats:
+            csv: csv
+          csv_settings:
+            delimiter: ','
+            enclosure: '"'
+            escape_char: \
+            strip_tags: true
+            trim: true
+            encoding: utf8
+            utf8_bom: '0'
+            use_serializer_encode_only: false
+      display_extenders: {  }
+      path: test
+      displays:
+        page_1: page_1
+        default: '0'
+      filename: ''
+      automatic_download: false
+      store_in_public_file_directory: null
+      custom_redirect_path: false
+      redirect_to_display: none
+      include_query_params: false
+    cache_metadata:
+      max-age: 0
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - request_format
+        - url
         - user
         - 'user.node_grants:view'
         - user.permissions
