--- a/web/modules/contrib/webform/webform.links.task.yml
+++ b/web/modules/contrib/webform/webform.links.task.yml
@@ -62,7 +62,7 @@ webform.config.elements:
 
 webform.config.submissions:
   title: 'Submissions'
-  route_name: coe_webform_reports.page2
+  route_name: webform.config.submissions
   parent_id: webform.config
   weight: 40
 
