--- a/sync/views.view.content.yml
+++ b/sync/views.view.content.yml
@@ -1,16 +1,10 @@
-uuid: 6000f8f8-cb6d-4a42-9ac1-c4a87d4f562a
+uuid: af0da956-c3ef-4e16-88bc-5dfb20e327f2
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.storage.node.field_trend
   module:
-    - csv_serialization
     - node
-    - rest
-    - serialization
     - user
-    - views_data_export
 _core:
   default_config_hash: vBKWYGGDoAX-tFd1JErB8tZLSxx3lJ0foouVsgpcbB4
 id: content
@@ -243,74 +237,15 @@ display:
           empty_zero: false
           hide_alter_empty: true
           destination: true
-        field_trend:
-          id: field_trend
-          table: node__field_trend
-          field: field_trend
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: Trend
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
       pager:
-        type: some
+        type: full
         options:
-          offset: 0
-          items_per_page: 10
+          items_per_page: 50
+          tags:
+            next: 'Next ›'
+            previous: '‹ Previous'
+            first: '« First'
+            last: 'Last »'
       exposed_form:
         type: basic
         options:
@@ -526,48 +461,6 @@ display:
           expose:
             operator_limit_selection: false
             operator_list: {  }
-        field_symbol_value:
-          id: field_symbol_value
-          table: node__field_symbol
-          field: field_symbol_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: string
-          operator: '='
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_symbol_value_op
-            label: 'Symbol (field_symbol)'
-            description: ''
-            use_operator: false
-            operator: field_symbol_value_op
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: field_symbol_value
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              content_editor: '0'
-              administrator: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
       filter_groups:
         operator: AND
         groups:
@@ -689,51 +582,7 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_trend'
-  data_export_1:
-    id: data_export_1
-    display_title: 'Data export'
-    display_plugin: data_export
-    position: 2
-    display_options:
-      style:
-        type: data_export
-        options:
-          formats:
-            csv: csv
-          csv_settings:
-            delimiter: ','
-            enclosure: '"'
-            escape_char: \
-            strip_tags: true
-            trim: true
-            encoding: utf8
-            utf8_bom: '0'
-            use_serializer_encode_only: false
-      display_extenders: {  }
-      path: test
-      displays:
-        page_1: page_1
-        default: '0'
-      filename: ''
-      automatic_download: false
-      store_in_public_file_directory: null
-      custom_redirect_path: false
-      redirect_to_display: none
-      include_query_params: false
-    cache_metadata:
-      max-age: 0
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - request_format
-        - url
-        - user
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.field_trend'
+      tags: {  }
   page_1:
     id: page_1
     display_title: Page
@@ -765,5 +614,4 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_trend'
+      tags: {  }
